# gps-pipeline

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/: copilot-instructions.md
config/: 260306_15.json  260317_16.json  260318_15.json  260320_16.json  default.json  file_output.json
data/: sample.nmea
docs/: BINARY_FORMAT.md  FILTER_CONFIG.md  cpp_test_assignment (1).docx  filters_progress.md  pipeline_progress.md  real_data_processing_progress.md  refactoring_plan.md  workflow_context.md  ~$p_test_assignment (1).docx
include/: GpsPoint.h
include/config/: Config.h  ConfigLoader.h
include/filter/: CoordinateJumpFilter.h  FilterChain.h  FirLowPassFilter.h  HeightFilter.h  IGpsFilter.h  JumpSuppressFilter.h  MovingAverageFilter.h  ParkingFilter.h  QualityFilter.h  SatelliteFilter.h  SpeedFilter.h  StopFilter.h
include/output/: ConsoleOutput.h  FileOutput.h  IOutput.h
include/parser/: ChecksumValidator.h  GnssBinaryParser.h  IBinaryParser.h  INmeaParser.h  NmeaParser.h
include/pipeline/: BinaryPipeline.h  BinaryRecordReader.h  IRecordReader.h  MultiFileRecordReader.h  NmeaRecordReader.h  Pipeline.h
output/: 260306_15.log.1  260306_15.log.2  260317_16.log.1  260318_15.log.1  260318_15.log.2
src/: main.cpp
src/config/: ConfigLoader.cpp
src/filter/: CoordinateJumpFilter.cpp  FilterChain.cpp  FirLowPassFilter.cpp  HeightFilter.cpp  JumpSuppressFilter.cpp  MovingAverageFilter.cpp  ParkingFilter.cpp  QualityFilter.cpp  SatelliteFilter.cpp  SpeedFilter.cpp  StopFilter.cpp
src/output/: ConsoleOutput.cpp  FileOutput.cpp
src/parser/: ChecksumValidator.cpp  GnssBinaryParser.cpp  NmeaParser.cpp
src/pipeline/: BinaryPipeline.cpp  BinaryRecordReader.cpp  MultiFileRecordReader.cpp  NmeaRecordReader.cpp  Pipeline.cpp
tests/: CMakeLists.txt  test_binary_parser.cpp  test_checksum.cpp  test_config.cpp  test_fileoutput.cpp  test_filters.cpp  test_multifile_reader.cpp  test_new_filters.cpp  test_output.cpp  test_parser.cpp  test_pipeline.cpp  test_placeholder.cpp  test_record_readers.cpp  test_types.cpp
